[fix] removed z-index issue in footer

--- a/t24-frontend-main/src/app/components/QuixkLinks/Quicklinks.module.css
+++ b/t24-frontend-main/src/app/components/QuixkLinks/Quicklinks.module.css
@@ -6,7 +6,6 @@
   font-weight: 400;
   font-size:0.6rem;
   border-color: black;
-  z-index: 10000;
   box-shadow: inset 1rem 1rem 1rem rgba(0, 0, 0, 0.5);
     display: flex;
     flex-grow: 1;
